# KUL_IDUB_EcclesialSchematisms

./: .dockerignore  .gitattributes  .gitignore  EXPERIMENT_FINDINGS.md  Makefile  README.md  pyproject.toml  pytest.ini  windows_setup.bat
api/: .dockerignore  Dockerfile  README.md  conftest.py  docker-compose.yml  requirements.txt  run_docling.py
api/scripts/: create_test_image.py  test_api.py
api/streamlit/: .dockerignore  .env.example  Dockerfile  app.py  conftest.py  requirements.txt
api/tests/: __init__.py  test_app.py
configs/dataset/: config.yaml  datasetconfig.yaml  default2.yaml  streamed_dataset.yaml
configs/llm/: config.yaml
configs/lmv3/: config.yaml
configs/logging/: config.yaml
configs/models/: config.yaml
configs/tests/: config.yaml  default.yaml  llm_config.yaml
configs/wandb/: default.yaml  tests_wandb_config.yaml
data/mappings/: deanery.json
docs/: TESTING_GUIDE.md  research_questions.md
docs/definitions/: research_questions_original.md  schematism.md
experimental/: app.py  batch_output.html  main.py  output.html  requirements.txt
experimental/results/: batch_01.md
history/: runs.db
history/runs/: index.db
jupyter_notebooks/: core.py  dataset_loader.py  labelstudio_client copy.ipynb  layoutlmv3_inference.ipynb  utils.py
label-studio/: .env.dev  .env.example  docker-compose.dev.yaml  docker-compose.gpu.yaml  docker-compose.yaml  sync-minio.sh
label-studio/data/: label_studio.sqlite3
label-studio/dataset_sync/: config.py  convert_raw_annotations.py  dataset_sync.py  setup_data.sh
notebooks/: eda.ipynb  finetune_layoutlmv3.ipynb  labelstudio_client copy.ipynb  labelstudio_client.ipynb  llm_annotating.ipynb  mappings_eda.ipynb
research/: main.ipynb  notatki.md  requirements.txt
schedules/: schedules.db
scripts/: create_schematisms_buckets.py
src/: Fine_tune_Donut_on_a_custom_dataset_(CORD)_with_PyTorch_Lightning.ipynb  __init__.py  conftest.py  evaluate.py  inference.py  losses.py  maps.py  metrics.py  shared.py  train.py  trainers.py  training.py  utils.py
src/conf/: config.yaml  wandb.yaml
src/core/: exceptions.py
src/dataset/: .gitkeep  filters.py  parser.py  utils.py
src/donut/: utils.py
src/llm/: evaluate.py  interface.py  prompt_manager.py  structured.py
src/lmv3/: evaluation.py  stats.py  train.py
src/logger/: setup.py
src/scripts/: add_source_dataset_to_hf_dataset.py  cut_images.py  download_samples.py  evaluate.py  evaluate_model.py  generate_default_configs.py  generate_hf_parsed_dataset.py  generate_mappings.py  generate_source_dataset.py  inference.py  main.py  train.py  train_model.py
src/services/: .env.prod  docker-compose.dev.yaml  docker-compose.gpu.yaml  docker-compose.yaml  sync-minio.sh
src/tests/: conftest.py
src/utils/: utils.py  (+1 more)
tests/: conftest.py  run_evaluation_tests.py  test_fixtures.py
(+219 files in other folders)
