[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.1.0"
description = "Prototyp ekstrakcji i transformacji"
authors = [
    {name = "Artur Podsiadły", email = "artpods56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "accelerate",
    "hydra-core",
    "wandb",
    "structlog",
    "rich",
    "diskcache==5.6.3",
    "datasets",
    "geopandas",
    "jinja2",
    "mistralai",
    "omegaconf",
    "openai",
    "pillow",
    "pydantic",
    "pytesseract",
    "python-dotenv",
    "pyyaml",
    "rapidfuzz",
    "shapely",
    "streamlit",
    "openpyxl",
    "thefuzz",
    "tqdm",
    "typing_extensions"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.dagster]
module_name = "src.orchestration.assets.data"
attribute = "definitions"